--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "build": "npm run build:css && react-scripts build",
         "test:i": "react-scripts test",
         "eject": "react-scripts eject",
-        "serve": "npm run build && npm run api",
+        "serve": "npm run build",
         "build:css": "postcss src/styles/tailwind.css -o src/styles/main.css"
     },
     "eslintConfig": {
